--- a/ServerFileManager/MainWindow.xaml
+++ b/ServerFileManager/MainWindow.xaml
@@ -25,6 +25,8 @@
                         HorizontalAlignment="Center">
                 <TextBlock 
                     Margin="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
                     x:Name="statusTxt"
                     Text="Please Wait"
                     FontSize="50"
@@ -35,7 +37,8 @@
                     Background="Transparent"
                     BorderBrush="Red"
                     x:Name="progBar"
-                    Height="20"/>
+                    Height="20"
+                    />
 
             </StackPanel>
         </Grid>
